@@ -5,39 +5,40 @@
  * Copyright (C) 2010 - 2012 The State and University Library, The Royal Library and The State Archives, Denmark
  * %%
  * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Lesser General Public License as 
- * published by the Free Software Foundation, either version 2.1 of the 
+ * it under the terms of the GNU Lesser General Public License as
+ * published by the Free Software Foundation, either version 2.1 of the
  * License, or (at your option) any later version.
- * 
+ *
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Lesser Public License for more details.
- * 
- * You should have received a copy of the GNU General Lesser Public 
+ *
+ * You should have received a copy of the GNU General Lesser Public
  * License along with this program.  If not, see
  * <http://www.gnu.org/licenses/lgpl-2.1.html>.
  * #L%
  */
 package org.bitrepository.client.conversation;
 
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.Map;
 import org.bitrepository.bitrepositoryelements.ResponseCode;
 import org.bitrepository.bitrepositorymessages.MessageResponse;
 import org.bitrepository.client.conversation.selector.SelectedComponentInfo;
 import org.bitrepository.client.exceptions.UnexpectedResponseException;
 import org.bitrepository.common.exceptions.UnableToFinishException;
 
+import java.util.Collection;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+
 /**
  * Handles the booking of performing the request phase messaging. Only the specialized workflow steps are required to
  * be implemented the subclass.
  */
 public abstract class PerformingOperationState extends GeneralConversationState {
-    protected Map<String,String> activeContributors;
+    protected Map<String, String> activeContributors;
 
     /**
      * @param expectedContributors The components to perform the actual operation for. The operation is considered
@@ -52,7 +53,7 @@ public abstract class PerformingOperationState extends GeneralConversationState 
     }
 
     protected PerformingOperationState(String componentID) {
-        super(Arrays.asList(componentID));
+        super(List.of(componentID));
     }
 
     @Override
@@ -67,9 +68,9 @@ public abstract class PerformingOperationState extends GeneralConversationState 
                 if (msg.getResponseInfo().getResponseCode().equals(ResponseCode.OPERATION_COMPLETED)) {
                     generateContributorCompleteEvent(msg);
                 } else {
-                    isFinalResponse  = handleFailureResponse(msg);
+                    isFinalResponse = handleFailureResponse(msg);
                 }
-            } catch(UnexpectedResponseException ure ) {
+            } catch (UnexpectedResponseException ure) {
                 getContext().getMonitor().warning(ure.getMessage());
             }
         }
@@ -78,8 +79,9 @@ public abstract class PerformingOperationState extends GeneralConversationState 
 
     @Override
     protected void logStateTimeout() throws UnableToFinishException {
-        throw new UnableToFinishException("Failed to receive responses from all contributors before timeout(" +
-                getTimeoutValue() + "ms). Missing contributors " + getOutstandingComponents());
+        throw new UnableToFinishException(
+                "Failed to receive responses from all contributors before timeout(" + getTimeoutValue() + "ms). Missing contributors " +
+                        getOutstandingComponents());
     }
 
     @Override
@@ -94,13 +96,13 @@ public abstract class PerformingOperationState extends GeneralConversationState 
             return new FinishedState(getContext());
         } else {
             getContext().getMonitor().timeoutRemainingContributors(getOutstandingComponents());
-            throw new UnableToFinishException("All contributors haven't responded. Missing contributors " +
-                    getOutstandingComponents());
+            throw new UnableToFinishException("All contributors haven't responded. Missing contributors " + getOutstandingComponents());
         }
     }
 
     /**
      * Delegating the generation of the COMPLETE_EVENT to the concrete state.
+     *
      * @param msg The final response to process into result event.
      * @throws UnexpectedResponseException Unable to generate a result event based on the supplied message.
      */
@@ -108,22 +110,23 @@ public abstract class PerformingOperationState extends GeneralConversationState 
 
     private static Collection<String> toComponentIDs(Collection<SelectedComponentInfo> contributors) {
         Collection<String> componentIDs = new HashSet<>();
-        for (SelectedComponentInfo componentInfo: contributors) {
+        for (SelectedComponentInfo componentInfo : contributors) {
             componentIDs.add(componentInfo.getID());
         }
         return componentIDs;
     }
+
     /**
-     * Implements the default handling of failure responses which is is to do nothing
+     * Implements the default handling of failure responses which is to do nothing
      * (besides being registered in the event monitor, which is handled by the parent class).
+     *
      * @param msg The failure message to handle
-     * @throws UnableToFinishException if the operation is unable to finish
      * @return true
+     * @throws UnableToFinishException if the operation is unable to finish
      */
     protected boolean handleFailureResponse(MessageResponse msg) throws UnableToFinishException {
-        getContext().getMonitor().contributorFailed(
-                msg.getResponseInfo().getResponseText(), msg.getFrom(), 
-                msg.getResponseInfo().getResponseCode());
+        getContext().getMonitor()
+                .contributorFailed(msg.getResponseInfo().getResponseText(), msg.getFrom(), msg.getResponseInfo().getResponseCode());
         return true;
     }
 }
