@@ -5,31 +5,22 @@
  * Copyright (C) 2010 - 2012 The State and University Library, The Royal Library and The State Archives, Denmark
  * %%
  * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Lesser General Public License as 
- * published by the Free Software Foundation, either version 2.1 of the 
+ * it under the terms of the GNU Lesser General Public License as
+ * published by the Free Software Foundation, either version 2.1 of the
  * License, or (at your option) any later version.
- * 
+ *
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Lesser Public License for more details.
- * 
- * You should have received a copy of the GNU General Lesser Public 
+ *
+ * You should have received a copy of the GNU General Lesser Public
  * License along with this program.  If not, see
  * <http://www.gnu.org/licenses/lgpl-2.1.html>.
  * #L%
  */
 
 package org.bitrepository.commandline;
-
-import java.io.File;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.security.NoSuchAlgorithmException;
-import java.util.Arrays;
-import java.util.List;
-
-import javax.jms.JMSException;
 
 import org.apache.commons.cli.Option;
 import org.apache.commons.cli.ParseException;
@@ -51,15 +42,28 @@ import org.bitrepository.protocol.messagebus.MessageBus;
 import org.bitrepository.protocol.messagebus.MessageBusManager;
 import org.bitrepository.protocol.security.SecurityManager;
 
+import javax.jms.JMSException;
+import java.io.File;
+import java.net.MalformedURLException;
+import java.net.URL;
+import java.security.NoSuchAlgorithmException;
+import java.util.List;
+
 /**
  * Defines the common functionality for command-line-clients.
  */
 public abstract class CommandLineClient {
     private final String componentID;
+    protected final OutputHandler output = new DefaultOutputHandler(getClass());
+    protected final Settings settings;
+    protected final SecurityManager securityManager;
+    protected final CommandLineArgumentsHandler cmdHandler;
+    private final FileIDValidator fileIDValidator;
 
     /**
-     * Runs a specific command-line-client operation. 
+     * Runs a specific command-line-client operation.
      * Handles also the closing of connections and deals with exceptions.
+     *
      * @throws Exception if an error occurs
      */
     public void runCommand() throws Exception {
@@ -75,31 +79,19 @@ public abstract class CommandLineClient {
         }
     }
 
-    /** For handling the output.*/
-    protected final OutputHandler output = new DefaultOutputHandler(getClass());
-
-    /** The settings for the client.*/
-    protected final Settings settings;
-    /** The security manager.*/
-    protected final SecurityManager securityManager;
-    /** The handler for the command line arguments.*/
-    protected final CommandLineArgumentsHandler cmdHandler;
-    private final FileIDValidator fileIDValidator;
-
     /**
      * @param args The generic command line arguments for defining the operation.
      */
-    protected CommandLineClient(String ... args) {
+    protected CommandLineClient(String... args) {
         cmdHandler = new CommandLineArgumentsHandler();
         createOptionsForCmdArgumentHandler();
         try {
             cmdHandler.parseArguments(args);
         } catch (ParseException pe) {
-            output.error(cmdHandler.listArguments() +
-                    "Missing argument: " + pe.getMessage());
+            output.error(cmdHandler.listArguments() + "Missing argument: " + pe.getMessage());
             throw new IllegalArgumentException("Missing arguments", pe);
         }
-        if(cmdHandler.hasOption(Constants.VERBOSITY_ARG)) {
+        if (cmdHandler.hasOption(Constants.VERBOSITY_ARG)) {
             output.setVerbosity(true);
         }
         settings = cmdHandler.loadSettings();
@@ -124,6 +116,7 @@ public abstract class CommandLineClient {
 
     /**
      * Defines the componentID of the concrete client. Must be specified by in the subclass.
+     *
      * @return The componentID of the concrete client.
      */
     protected String getComponentID() {
@@ -133,6 +126,7 @@ public abstract class CommandLineClient {
     /**
      * Used for determining whether the fileID Argument is required for the concrete operation.
      * Must be specified by in the subclass.
+     *
      * @return Indicates whether the -f
      */
     protected abstract boolean isFileIDArgumentRequired();
@@ -148,13 +142,12 @@ public abstract class CommandLineClient {
         collectionOption.setRequired(Constants.ARGUMENT_IS_REQUIRED);
         cmdHandler.addOption(collectionOption);
 
-        Option fileIDOption = new Option(Constants.FILE_ID_ARG, Constants.HAS_ARGUMENT,
-                "The id for the file to perform the operation on.");
+        Option fileIDOption = new Option(Constants.FILE_ID_ARG, Constants.HAS_ARGUMENT, "The id for the file to perform the operation on.");
         fileIDOption.setRequired(isFileIDArgumentRequired());
         cmdHandler.addOption(fileIDOption);
 
-        Option pillarOption = new Option(Constants.PILLAR_ARG, Constants.HAS_ARGUMENT, "[OPTIONAL] The id of the "
-                + "pillar where the operation should be performed. If undefined the operation is performed on all pillars.");
+        Option pillarOption = new Option(Constants.PILLAR_ARG, Constants.HAS_ARGUMENT, "[OPTIONAL] The id of the " +
+                "pillar where the operation should be performed. If undefined the operation is performed on all pillars.");
         pillarOption.setRequired(Constants.ARGUMENT_IS_NOT_REQUIRED);
         cmdHandler.addOption(pillarOption);
     }
@@ -163,23 +156,23 @@ public abstract class CommandLineClient {
      * @throws IllegalArgumentException One of the arguments wasn't valid.
      */
     protected void validateArguments() {
-        if(cmdHandler.hasOption(Constants.FILE_ID_ARG)) {
+        if (cmdHandler.hasOption(Constants.FILE_ID_ARG)) {
             fileIDValidator.checkFileID(cmdHandler.getOptionValue(Constants.FILE_ID_ARG));
         }
-        if(cmdHandler.hasOption(Constants.COLLECTION_ID_ARG)) {
+        if (cmdHandler.hasOption(Constants.COLLECTION_ID_ARG)) {
             List<String> collections = SettingsUtils.getAllCollectionsIDs();
             String collectionArgument = cmdHandler.getOptionValue(Constants.COLLECTION_ID_ARG);
             if (!collections.contains(collectionArgument)) {
-                throw new IllegalArgumentException(collectionArgument + " is not a valid collection." +
-                        "\nThe following collections are defined: " + collections);
+                throw new IllegalArgumentException(
+                        collectionArgument + " is not a valid collection." + "\nThe following collections are defined: " + collections);
             }
         }
-        if(cmdHandler.hasOption(Constants.PILLAR_ARG)) {
+        if (cmdHandler.hasOption(Constants.PILLAR_ARG)) {
             String pillarArgument = cmdHandler.getOptionValue(Constants.PILLAR_ARG);
             List<String> pillarsInCollection = SettingsUtils.getPillarIDsForCollection(getCollectionID());
             if (!pillarsInCollection.contains(pillarArgument)) {
-                throw new IllegalArgumentException(pillarArgument + " is not a valid pillar for collection " +
-                        getCollectionID() + "\nThe collection contains the following pillars: " + pillarsInCollection);
+                throw new IllegalArgumentException(pillarArgument + " is not a valid pillar for collection " + getCollectionID() +
+                        "\nThe collection contains the following pillars: " + pillarsInCollection);
             }
         }
     }
@@ -189,7 +182,7 @@ public abstract class CommandLineClient {
      * otherwise all file ids will be requested.
      */
     protected String getFileIDs() {
-        if(cmdHandler.hasOption(Constants.FILE_ID_ARG)) {
+        if (cmdHandler.hasOption(Constants.FILE_ID_ARG)) {
             return cmdHandler.getOptionValue(Constants.FILE_ID_ARG);
         } else {
             return null;
@@ -206,11 +199,12 @@ public abstract class CommandLineClient {
     /**
      * Extract the pillar ids. If a specific pillar is given as argument, then it will be returned, but if no such
      * argument has been given, then the list of all pillar ids are given.
+     *
      * @return The list of pillars to request for the file ids.
      */
     protected List<String> getPillarIDs() {
-        if(cmdHandler.hasOption(Constants.PILLAR_ARG)) {
-            return Arrays.asList(cmdHandler.getOptionValue(Constants.PILLAR_ARG));
+        if (cmdHandler.hasOption(Constants.PILLAR_ARG)) {
+            return List.of(cmdHandler.getOptionValue(Constants.PILLAR_ARG));
         } else {
             return SettingsUtils.getPillarIDsForCollection(getCollectionID());
         }
@@ -220,8 +214,8 @@ public abstract class CommandLineClient {
      * @return The timeout to use for performing the full operation.
      */
     protected long getTimeout() {
-        return settings.getRepositorySettings().getClientSettings().getIdentificationTimeout().longValue()
-                + settings.getRepositorySettings().getClientSettings().getOperationTimeout().longValue();
+        return settings.getRepositorySettings().getClientSettings().getIdentificationTimeout().longValue() +
+                settings.getRepositorySettings().getClientSettings().getOperationTimeout().longValue();
     }
 
     /**
@@ -235,7 +229,7 @@ public abstract class CommandLineClient {
      * @return The requested checksum spec, or null.
      */
     protected ChecksumSpecTYPE getRequestChecksumSpecOrNull() {
-        if(!cmdHandler.hasOption(Constants.REQUEST_CHECKSUM_TYPE_ARG)) {
+        if (!cmdHandler.hasOption(Constants.REQUEST_CHECKSUM_TYPE_ARG)) {
             return null;
         }
 
@@ -246,22 +240,22 @@ public abstract class CommandLineClient {
      * Create the ChecksumSpecTYPE based on the cmd-line arguments.
      * Do not use directly. Use either 'getRequestChecksumSpecOrNull' or 'getRequestChecksumSpecOrDefault' to handle
      * the case, when no request arguments have been defined.
+     *
      * @return The requested checksum spec.
      */
     private ChecksumSpecTYPE getRequestChecksumSpec() {
         ChecksumSpecTYPE res = new ChecksumSpecTYPE();
         res.setChecksumType(ChecksumExtractionUtils.extractChecksumType(cmdHandler, settings, output));
 
-        if(cmdHandler.hasOption(Constants.REQUEST_CHECKSUM_SALT_ARG)) {
-            res.setChecksumSalt(Base16Utils.encodeBase16(cmdHandler.getOptionValue(
-                    Constants.REQUEST_CHECKSUM_SALT_ARG)));
+        if (cmdHandler.hasOption(Constants.REQUEST_CHECKSUM_SALT_ARG)) {
+            res.setChecksumSalt(Base16Utils.encodeBase16(cmdHandler.getOptionValue(Constants.REQUEST_CHECKSUM_SALT_ARG)));
         }
 
         try {
             ChecksumUtils.verifyAlgorithm(res);
         } catch (NoSuchAlgorithmException e) {
             output.error("Invalid checksum algorithm: " + e.getMessage());
-            throw new IllegalStateException("Invalid checksumspec for '" + res + "'", e);
+            throw new IllegalStateException("Invalid checksumSpec for '" + res + "'", e);
         }
 
         return res;
@@ -269,19 +263,19 @@ public abstract class CommandLineClient {
 
     /**
      * Finds the file from the arguments.
+     *
      * @return The requested file, or null if no file argument was given.
      */
     protected File findTheFile() {
-        if(!cmdHandler.hasOption(Constants.FILE_ARG)) {
+        if (!cmdHandler.hasOption(Constants.FILE_ARG)) {
             output.warn("No file argument was given, so no file can be found.");
             return null;
         }
         String filePath = cmdHandler.getOptionValue(Constants.FILE_ARG);
 
         File file = new File(filePath);
-        if(!file.isFile()) {
-            throw new IllegalArgumentException("The file '" + filePath + "' is invalid. It does not exists or it "
-                    + "is a directory.");
+        if (!file.isFile()) {
+            throw new IllegalArgumentException("The file '" + filePath + "' is invalid. It does not exists or it " + "is a directory.");
         }
 
         return file;
@@ -289,10 +283,11 @@ public abstract class CommandLineClient {
 
     /**
      * Creates the data structure for encapsulating the validation checksums for validation on the pillars.
+     *
      * @return The ChecksumDataForFileTYPE for the pillars to validate the DeleteFile or ReplaceFile operations.
      */
     protected ChecksumDataForFileTYPE getChecksumDataForDeleteValidation() {
-        if(!cmdHandler.hasOption(Constants.CHECKSUM_ARG)) {
+        if (!cmdHandler.hasOption(Constants.CHECKSUM_ARG)) {
             return null;
         }
 
@@ -305,7 +300,8 @@ public abstract class CommandLineClient {
     }
 
     /**
-     * Removes the file at the webserver after the operation has finished..
+     * Removes the file at the webserver after the operation has finished.
+     *
      * @param url The URL where the file should be removed from.
      */
     protected void deleteFileAfterwards(URL url) {
@@ -322,10 +318,11 @@ public abstract class CommandLineClient {
      * Retrieves the URL for the PutFile operation.
      * Either uploads the actual file to a webserver, or takes the URL argument.
      * Requires either the File argument or the URL argument.
+     *
      * @return The URL for the file.
      */
     protected URL getURLOrUploadFile() {
-        if(cmdHandler.hasOption(Constants.FILE_ARG)) {
+        if (cmdHandler.hasOption(Constants.FILE_ARG)) {
             File f = findTheFile();
             FileExchange fileexchange = ProtocolComponentFactory.getInstance().getFileExchange(settings);
             return fileexchange.putFile(f);
@@ -333,8 +330,8 @@ public abstract class CommandLineClient {
             try {
                 return new URL(cmdHandler.getOptionValue(Constants.URL_ARG));
             } catch (MalformedURLException e) {
-                throw new IllegalArgumentException("The URL argument is either empty or not a valid URL: " 
-                        + cmdHandler.getOptionValue(Constants.URL_ARG), e);
+                throw new IllegalArgumentException(
+                        "The URL argument is either empty or not a valid URL: " + cmdHandler.getOptionValue(Constants.URL_ARG), e);
             }
         }
     }
@@ -343,7 +340,7 @@ public abstract class CommandLineClient {
      * @return The size of the actual file, or 0 if no file argument is given.
      */
     protected long getSizeOfFileOrZero() {
-        if(cmdHandler.hasOption(Constants.FILE_ARG)) {
+        if (cmdHandler.hasOption(Constants.FILE_ARG)) {
             return findTheFile().length();
         } else {
             return 0L;
@@ -351,8 +348,9 @@ public abstract class CommandLineClient {
     }
 
     /**
-     * Creates the data structure for encapsulating the validation checksums for validation of the PutFile 
+     * Creates the data structure for encapsulating the validation checksums for validation of the PutFile
      * or ReplaceFile operations.
+     *
      * @param file The file to have the checksum calculated.
      * @return The ChecksumDataForFileTYPE for the pillars to validate the operations.
      */
@@ -369,14 +367,15 @@ public abstract class CommandLineClient {
     }
 
     /**
-     * Creates the data structure for encapsulating the validation checksums for validation of the PutFile 
+     * Creates the data structure for encapsulating the validation checksums for validation of the PutFile
      * or ReplaceFile operations.
-     * @param arg The name of the argument to retrieve the checksum from 
-     * (must likely Constants.CHECKSUM_ARG or Constants.REPLACE_CHECKSUM_ARG)
+     *
+     * @param arg The name of the argument to retrieve the checksum from
+     *            (must likely Constants.CHECKSUM_ARG or Constants.REPLACE_CHECKSUM_ARG)
      * @return The ChecksumDataForFileTYPE for the pillars to validate the operations.
      */
     protected ChecksumDataForFileTYPE getValidationChecksumDataFromArgument(String arg) {
-        if(!cmdHandler.hasOption(arg)) {
+        if (!cmdHandler.hasOption(arg)) {
             return null;
         }
         ChecksumSpecTYPE csSpec = ChecksumUtils.getDefault(settings);
@@ -391,10 +390,11 @@ public abstract class CommandLineClient {
 
     /**
      * Extracts the id of the file to be put.
-     * @return The either the value of the file id argument, or no such option, then the name of the file.
+     *
+     * @return Returns either the value of the file ID argument, or no such option, then the name of the file.
      */
     protected String retrieveFileID() {
-        if(cmdHandler.hasOption(Constants.FILE_ID_ARG)) {
+        if (cmdHandler.hasOption(Constants.FILE_ID_ARG)) {
             return cmdHandler.getOptionValue(Constants.FILE_ID_ARG);
         } else {
             return findTheFile().getName();
@@ -403,11 +403,12 @@ public abstract class CommandLineClient {
 
     /**
      * Closes the connections, e.g. to the message-bus.
+     *
      * @throws JMSException If the message-bus cannot be closed.
      */
     public void shutdown() throws JMSException {
         MessageBus bus = MessageBusManager.getMessageBus();
-        if(bus != null) {
+        if (bus != null) {
             bus.close();
         }
     }
