@@ -1,43 +1,28 @@
 /*
  * #%L
  * Bitmagasin Protocol
- * 
+ *
  * $Id$
  * $HeadURL$
  * %%
  * Copyright (C) 2010 The State and University Library, The Royal Library and The State Archives, Denmark
  * %%
  * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Lesser General Public License as 
- * published by the Free Software Foundation, either version 2.1 of the 
+ * it under the terms of the GNU Lesser General Public License as
+ * published by the Free Software Foundation, either version 2.1 of the
  * License, or (at your option) any later version.
- * 
+ *
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Lesser Public License for more details.
- * 
- * You should have received a copy of the GNU General Lesser Public 
+ *
+ * You should have received a copy of the GNU General Lesser Public
  * License along with this program.  If not, see
  * <http://www.gnu.org/licenses/lgpl-2.1.html>.
  * #L%
  */
 package org.bitrepository.protocol.http;
-
-import java.io.BufferedInputStream;
-import java.io.BufferedOutputStream;
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileOutputStream;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.OutputStream;
-import java.io.UnsupportedEncodingException;
-import java.net.HttpURLConnection;
-import java.net.MalformedURLException;
-import java.net.URISyntaxException;
-import java.net.URL;
-import java.net.URLEncoder;
 
 import org.apache.http.HttpResponse;
 import org.apache.http.client.methods.HttpDelete;
@@ -58,34 +43,37 @@ import org.bitrepository.settings.referencesettings.FileExchangeSettings;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-/**
- * Simple interface for data transfer between an application and a HTTP server.
- */
+import java.io.BufferedInputStream;
+import java.io.BufferedOutputStream;
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
+import java.net.HttpURLConnection;
+import java.net.MalformedURLException;
+import java.net.URISyntaxException;
+import java.net.URL;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+
 public class HttpFileExchange implements FileExchange {
     private final Logger log = LoggerFactory.getLogger(getClass());
-    
-    /** The lower boundary for the error codes of the HTTP codes.*/
     private static final int HTTP_ERROR_CODE_BARRIER = 300;
-    /** Default buffer size 1MB */
     protected int HTTP_BUFFER_SIZE = 1024 * 1024;
-    /** Default chunk size 64K */
     protected static final int HTTP_CHUNK_SIZE = 64 * 1024;
-    /** The settings for the file exchange.*/
     protected final Settings settings;
-    
-    /**
-     * Initialise HTTP file exchange.
-     * @param settings The settings regarding the file exchange through HTTP.
-     */
+
     public HttpFileExchange(Settings settings) {
         this.settings = settings;
     }
-    
+
     @Override
     public void putFile(InputStream in, URL url) throws IOException {
         performUpload(in, url);
     }
-    
+
     @Override
     public InputStream getFile(URL url) throws IOException {
         return retrieveStream(url);
@@ -93,72 +81,67 @@ public class HttpFileExchange implements FileExchange {
 
     @Override
     public URL putFile(File dataFile) {
-        if(dataFile == null) {
+        if (dataFile == null) {
             throw new IllegalArgumentException("The datafile may not be null.");
         }
-        if(!dataFile.isFile()) {
-            throw new IllegalArgumentException("The datafile '" 
-                    + dataFile.getPath() + "' is not a proper file.");
+        if (!dataFile.isFile()) {
+            throw new IllegalArgumentException("The datafile '" + dataFile.getPath() + "' is not a proper file.");
         }
-        
+
         try {
             // generate the URL for the file.
             URL url = getURL(dataFile.getName());
-            
-            try (InputStream in = new BufferedInputStream(new FileInputStream(dataFile), HTTP_BUFFER_SIZE)){
+
+            try (InputStream in = new BufferedInputStream(new FileInputStream(dataFile), HTTP_BUFFER_SIZE)) {
                 performUpload(in, url);
             }
             return url;
         } catch (IOException e) {
-            throw new CoordinationLayerException("Could not upload the file '"
-                    + dataFile.getAbsolutePath() + "' to the server." , e);
+            throw new CoordinationLayerException("Could not upload the file '" + dataFile.getAbsolutePath() + "' to the server.", e);
         }
     }
-    
+
     @Override
-    public void getFile(OutputStream out, URL url)
-            throws IOException {
+    public void getFile(OutputStream out, URL url) throws IOException {
         performDownload(out, url);
     }
-    
+
     @Override
     public void getFile(File outputFile, String fileAddress) {
         try {
-            // retrieve the url and the outputstream for the file.
+            // retrieve the url and the output-stream for the file.
             URL url = new URL(fileAddress);
             try (OutputStream out = new BufferedOutputStream(new FileOutputStream(outputFile))) {
                 // download the file.
                 performDownload(out, url);
             }
         } catch (IOException e) {
-            throw new CoordinationLayerException("Could not download data "
-                    + "from '" + fileAddress + "' to the file '" 
-                    + outputFile.getAbsolutePath() + "'.", e);
+            throw new CoordinationLayerException(
+                    "Could not download data " + "from '" + fileAddress + "' to the file '" + outputFile.getAbsolutePath() + "'.", e);
         }
     }
-    
+
     /**
-     * Retrieves the data from a given url and puts it onto a given 
-     * outputstream. It has to be a 'HTTP' url, since the data is retrieved 
+     * Retrieves the data from a given url and puts it onto a given
+     * output-stream. It has to be a 'HTTP' url, since the data is retrieved
      * through a HTTP-request.
-     * 
+     *
      * @param out The output stream to put the data.
      * @param url The url for where the data should be retrieved.
-     * @throws IOException If any problems occurs during the retrieval of the 
-     * data.
+     * @throws IOException If any problems occurs during the retrieval of the
+     *                     data.
      */
-    protected void performDownload(OutputStream out, URL url)
-            throws IOException {
-        if(out == null || url == null) {
-            throw new IllegalArgumentException("OutputStream out: '" + out
-                    + "', URL: '" + url + "'");
+    protected void performDownload(OutputStream out, URL url) throws IOException {
+        if (out == null || url == null) {
+            throw new IllegalArgumentException("OutputStream out: '" + out + "', URL: '" + url + "'");
         }
         InputStream is = retrieveStream(url);
         StreamUtils.copyInputStreamToOutputStream(is, out);
     }
-    
+
     /**
      * Retrieves the Input stream for a given URL.
+     *
      * @param url The URL to retrieve.
      * @return The InputStream to the given URL.
      * @throws IOException If any problems occurs during the retrieval.
@@ -169,24 +152,24 @@ public class HttpFileExchange implements FileExchange {
         conn.setRequestMethod("GET");
         return conn.getInputStream();
     }
-    
+
     /**
      * Method for putting data on the HTTP-server of a given url.
-     * 
-     * TODO perhaps make it synchronized around the URL, to prevent data from 
-     * trying to uploaded several times to the same location simultaneously. 
-     * Though it would not prevent synchronous upload from independent machines or JVMs. 
-     * 
-     * @param in The data to put into the url.
+     * <p>
+     * TODO perhaps make it synchronized around the URL, to prevent data from
+     * trying to uploaded several times to the same location simultaneously.
+     * Though it would not prevent synchronous upload from independent machines or JVMs.
+     *
+     * @param in  The data to put into the url.
      * @param url The place to put the data.
-     * @throws IOException If a problem with the connection occurs during the 
-     * transaction. Also if the response code is 300 or above, which indicates
-     * that the transaction has not been successful.
+     * @throws IOException If a problem with the connection occurs during the
+     *                     transaction. If the response code is 300 or above, which indicates
+     *                     that the transaction has not been successful.
      */
     private void performUpload(InputStream in, URL url) throws IOException {
         ArgumentValidator.checkNotNull(in, "InputStream in");
         ArgumentValidator.checkNotNull(url, "URL url");
-        
+
 
         try (CloseableHttpClient httpClient = getHttpClient()) {
             HttpPut httpPut = new HttpPut(url.toExternalForm());
@@ -196,35 +179,29 @@ public class HttpFileExchange implements FileExchange {
             HttpResponse response = httpClient.execute(httpPut);
 
             // HTTP code >= 300 means error!
-            if(response.getStatusLine().getStatusCode() >= HTTP_ERROR_CODE_BARRIER) {
-                throw new IOException("Could not upload file to URL '" + url.toExternalForm() + "'. got status code '" 
-                        + response.getStatusLine() + "'");
+            if (response.getStatusLine().getStatusCode() >= HTTP_ERROR_CODE_BARRIER) {
+                throw new IOException(
+                        "Could not upload file to URL '" + url.toExternalForm() + "'. got status code '" + response.getStatusLine() + "'");
             }
-            log.debug("Uploaded datastream to url '" + url.toString() + "' and "
-                    + "received the response line '" + response.getStatusLine() + "'.");
+            log.debug("Uploaded data-stream to url '" + url + "' and " + "received the response line '" + response.getStatusLine() + "'.");
         }
     }
-    
+
     @Override
     public URL getURL(String filename) throws MalformedURLException {
         ArgumentValidator.checkNotNullOrEmpty(filename, "String fileName");
-        ArgumentValidator.checkNotNull(settings.getReferenceSettings().getFileExchangeSettings(), 
+        ArgumentValidator.checkNotNull(settings.getReferenceSettings().getFileExchangeSettings(),
                 "The ReferenceSettings are missing the settings for the file exchange.");
         FileExchangeSettings feSettings = settings.getReferenceSettings().getFileExchangeSettings();
-        try {
-            String urlEncodedFilename = URLEncoder.encode(filename, "UTF-8");
+        String urlEncodedFilename = URLEncoder.encode(filename, StandardCharsets.UTF_8);
 
-            URL res = new URL(feSettings.getProtocolType().value(), feSettings.getServerName(), 
-                    feSettings.getPort().intValue(), feSettings.getPath() + "/" + urlEncodedFilename);
-            return res;
-        } catch (UnsupportedEncodingException e) {
-            throw new IllegalStateException("Cannot create the URL.", e);
-        }
+        return new URL(feSettings.getProtocolType().value(), feSettings.getServerName(), feSettings.getPort().intValue(),
+                feSettings.getPath() + "/" + urlEncodedFilename);
     }
-    
+
     /**
-     * Method for opening a HTTP connection to the given URL.
-     * 
+     * Method for opening an HTTP connection to the given URL.
+     *
      * @param url The URL to open the connection to.
      * @return The HTTP connection to the given URL.
      */
@@ -235,22 +212,20 @@ public class HttpFileExchange implements FileExchange {
             throw new CoordinationLayerException("Could not open the connection to the url '" + url + "'", e);
         }
     }
-    
+
     /**
      * Retrieves the HttpClient with the correct setup.
      * For HTTPS this should be overridden with SSL context.
+     *
      * @return The HttpClient for this FileExchange.
      */
     protected CloseableHttpClient getHttpClient() {
         HttpClientBuilder builder = HttpClients.custom();
-        PoolingHttpClientConnectionManager poolingmgr = new PoolingHttpClientConnectionManager(
+        PoolingHttpClientConnectionManager connectionManager = new PoolingHttpClientConnectionManager(
                 new ChunkyManagedHttpClientConnectionFactory(HTTP_CHUNK_SIZE));
-        SocketConfig socketConfig = SocketConfig.custom()
-                .setSndBufSize(HTTP_BUFFER_SIZE)
-                .setRcvBufSize(HTTP_BUFFER_SIZE)
-                .build();
-        poolingmgr.setDefaultSocketConfig(socketConfig);
-        builder.setConnectionManager(poolingmgr);
+        SocketConfig socketConfig = SocketConfig.custom().setSndBufSize(HTTP_BUFFER_SIZE).setRcvBufSize(HTTP_BUFFER_SIZE).build();
+        connectionManager.setDefaultSocketConfig(socketConfig);
+        builder.setConnectionManager(connectionManager);
         return builder.build();
     }
 
